--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vue3-reader-example-app</title>
+    <script src="https://at.alicdn.com/t/c/font_3795015_4hwbxfm4i22.js?spm=a313x.7781069.1998910419.99&file=font_3795015_ddo5aw56h96.js"></script>
   </head>
   <body>
     <div id="app"></div>
